# MyMLZoomcamp2025

./: .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .yamllint  Dockerfile  Justfile  Makefile  README.md  docker-compose.yml  docker-run.sh  docker-start.just  docker-start.md  docker-start.sh  pyproject.toml
.ai/: AGENTS.md  CHANGELOG.md  SKILLS.md  STATUS.md  TODO.md
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: .env.demo  config.yml  dagster.yaml-template
config/linters/: yamllint.yaml
data/processed_test/: data_summary.txt  features.txt  processed_data.csv
data/raw_test/: synthetic_taxi.csv
deploy/: Dockerfile  docker-compose.yml
docs/: NOTEBOOK-QUICKREF.md  README.md  api.md  data_pipeline.md  development.md  make-just.md  model_development.md  notebook-testing.md
notebooks/: README.md  TROUBLESHOOTING.md  eda_taxi_trip_duration.ipynb
notebooks/templates/: eda_template.ipynb  experiment_template.ipynb
scripts/: Makefile-utils.sh  __init__.py  download_data.py  env-check.py  env-render.py  env-render.sh  load_data.py  log4bash.sh  process_data.py  setup.sh  simple_data_test.py  utils.sh
scripts/claude/: README.md  context.sh  install_skills.sh
scripts/codex/: Justfile  README.md  install_local_skills.sh
scripts/dagster/: start_dagster.sh
scripts/data_tools/: __init__.py  download_data.py  load_data.py  process_data.py
scripts/doctor/: Justfile  README.md  github_push_doctor.sh  loc-01-git-sync-push.sh  loc-02-project-health-check.sh  loc-03-docker-check.sh  run-tests-safe.py  web-tool-check.sh
scripts/notebooks/: check_sanitized.sh  format_notebooks.sh  lint_notebooks.sh  strip_notebooks.sh  test_notebooks.sh
scripts/setup/: Justfile  README.md  docker-check.sh  env-check.py  env-render.env  env-render.py  setup.sh
scripts/tests/: simple_ml_test.py
scripts/utils/: Makefile-utils.sh  log.sh  log4bash.sh  log4sh.sh  utils.sh
src/api/: main.py
src/config/: __init__.py  env.py  logging.py  paths.py
src/dags/: README.md  __init__.py  definitions.py
src/training/: evaluate.py  train.py
src/ui/: streamlit_app.py
tests/: Justfile  README.md  conftest.py  test_api.py  test_docker_container.py  test_download_data.py  test_evaluate.py  test_load_data.py  test_notebooks.py  test_orchestration.py  test_process_data.py  test_simple_data_test.py  test_simple_ml_test.py  test_training_artifacts.py
tests/bash/: simple_data_test.py  simple_ml_test.py  (+5 more)
(+41 files in other folders)
