[project]
name = "mymlzoomcamp2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.7.14",
    "dagster-webserver>=1.7.14",
    "duckdb>=1.1.3",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.11.2",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "uvicorn>=0.34.0",
]
