[project]
name = "mymlzoomcamp2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.7.14",
    "dagster-webserver>=1.7.14",
    "duckdb>=1.1.3",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "joblib>=1.4.2",
    "jupyterlab>=4.5.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "nbqa>=1.8.5",
    "nbstripout>=0.7.1",
    "nbval>=0.11.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyyaml>=6.0.2",
    "pyarrow>=18.1.0",
    "pydantic>=2.11.2",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "streamlit>=1.42.0",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "notebook: marks tests for Jupyter notebooks",
    "slow: marks tests as slow",
    "integration: marks integration tests (subprocess, docker, external deps)",
]

[tool.nbqa.addopts]
ruff = ["--extend-ignore=E501,F401,F841"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
